z-index issue fixed

--- a/src/blocks/marketing-button/style.scss
+++ b/src/blocks/marketing-button/style.scss
@@ -48,6 +48,7 @@
 		width: 20px;
 		height: 20px;
 		display: flex;
+		z-index: 1;
 	}
 
 	.uagb-marketing-btn__link:before {
